fixed light mode and dark mode

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,8 @@
 @media (prefers-color-scheme: dark) {
     body {
         background-color: black !important;
+    }
+    tr {
         color: white !important;
     }
 }
